# minininja

./: .gitignore  README.md
docs/: project_structure.md
proto/: .env.example  .gitignore  ARCHITECTURE.md  QUICK_FIX.md  README.md  REFACTORING.md  SETUP.md  __init__.py  config.py  entities.py  fruit_ninja_game.py  main.py  pyproject.toml
proto/data/: .gitkeep
proto/docs/: ARCHITECTURE_UPDATED.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  DOCS_UPDATE_LOG.md  MIGRATION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SUPABASE_SETUP.md  supabase_schema.sql
proto/old_files_backup/: README.md  fruit_ninja_game.py  gesture_detector.py  hand_tracker.py
proto/scripts/: README.md  setup.sh  setup_database.py  setup_supabase.py
proto/src/: __init__.py
proto/src/core/: __init__.py  game.py
proto/src/cv/: __init__.py
proto/src/leaderboard/: __init__.py  leaderboard.py
proto/src/ui/: __init__.py  leaderboard_ui.py
proto/tests/: README.md  test_setup.py  test_structure.py
